--- a/_posts/2023-09-05-dln.md
+++ b/_posts/2023-09-05-dln.md
@@ -1,10 +1,10 @@
 ---
-title: "Post"
+title: "dln"
 categories:
   - Blog
 tags:
-  - sample
-  - Post copy
+  - Assignment
+  - First
 ---
 
 Abbott: Strange as it may seem, they give ball players nowadays very peculiar names.
